--- a/config/Parameter.yaml
+++ b/config/Parameter.yaml
@@ -2,8 +2,7 @@ IP: 172.16.45.5
 Browser: Google Chrome
 ReportAddress: ''
 loop: '1'
-ImportAddress: "E:\\Automation2.0\\testdata\\\u65E0\u7EB8\u5316\u6D4B\u8BD5\u6587\u4EF6\
-  .xlsx"
+ImportAddress: "d:\\Desktop\\\u65E0\u7EB8\u5316\u6D4B\u8BD5\u6587\u4EF6.xlsx"
 Moudle: "\u5168\u90E8"
 Version: '75'
-CaseNum: 20
+CaseNum: 1
